Include Xcode project files

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,18 @@
-*info/
+# OS X Finder
+*.DS_Store
+
+# Xcode per-user config
+*.mode1
+*.mode1v3
+*.mode2v3
+*.perspective
+*.perspectivev3
+*.pbxuser
+*.xcworkspace
+*xcuserdata
+
 *media/
 *planning/
-*.vscode/
 *test.*
-*.code-workspace
 *.exe
 *.obj
-*.DS_Store
